# cicy

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  turbo.json
.github/workflows/: android.yaml  cd.yaml  connector.yaml  electron.yaml  rust.yaml  test.yaml
apps-py/exchange/: Readme.md  browser.py  config.py  pyproject.toml  utils.py
apps-py/exchange/adb/: test_ld_client_init.py  test_ld_client_u2rpc.py  test_uiautomator2.py
apps-py/exchange/agent/: AgentTest.py
apps-py/exchange/sites/: test_browser.py  test_browser_proxy.py  test_google.py  test_site_bingx.py  test_telegram.py
apps-py/proxy/: ProxyTest.py
apps-rust/cc-agent-rust/: Cargo.toml  Readme.md  build.sh
apps-rust/cc-agent-rust/src/: file.rs  jsonrpc_server.rs  main.rs  utils.rs
apps-rust/cc-connector-android/: Cargo.toml  Readme.md
apps-rust/cc-connector-android/src/: main.rs  message.rs  shell.rs
apps-rust/cici-server/: Cargo.toml  test-ws.html
apps-rust/cici-server/public/: index.html
apps-rust/cici-server/src/: api.rs  main.rs  model_contact.rs  openapi.yaml  server.rs  sqlite.rs  websocket.rs
apps-rust/cicy-agent/: Cargo.toml  build.sh
apps-rust/cicy-agent/src/: device.rs  jsonrpc_server.rs  main.rs  utils.rs  ws_client.rs
apps-rust/cicy-connector/: Cargo.toml  build.sh
apps-rust/cicy-connector/src/: file.rs  main.rs  message.rs  shell.rs  utils.rs  ws_client.rs
apps-rust/cicy-server/: Cargo.toml  build.sh  test-ws.html
apps-rust/cicy-server-app/: Cargo.toml  Readme.md
apps-rust/cicy-server-app/public/: index.html
apps-rust/cicy-server-app/src/: api.rs  (+8 more)
apps-rust/cicy-server/public/static/: script.js
apps-rust/cicy-server/src/: api.rs  main.rs  openapi.yaml  server.rs  shared_state.rs  shell.rs  swagger.rs  utils.rs  websocket.rs
apps-rust/cucy-agent/: Cargo.toml  build.sh  curl_test.sh
apps/cc-agent-adr/: .gitignore  build.sh  buildjni.sh  leaf.patch  readme.md  settings.gradle  sync.sh
apps/cc-agent-web/: eslint.config.js  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/: .env.example  .gitignore  entitlements.plist  forge.config.ts  package.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts
apps/desktop-render/: index.html  package.json  vite.config.mts
apps/proxy/: UrlTest.py  forward_to_clash.py  main.py
apps/py-cc/: Readme.md  browser.py  utils.py
tools/: fix-app.js  fix-version.js  icon.sh  icon_beta.sh  icon_prod.sh  proxy.md  sync.sh  tag.sh  version.sh
(+243 files in other folders)
