[workspace]
resolver = "2"
members = [
    "apps-rust/cicy-agent", "apps-rust/cicy-connector", "apps-rust/cicy-server"
]
# We miss our linux_no_std example from the default members since `cargo check`
# and `cargo test` both attempt to link the `std` library into it in error.

default-members = []

[workspace.package]
version = "1.0.10"
authors = [
    "Barry <barry.ptpt@gmail.com>"
]
edition = "2024"
license = "MIT"
repository = "https://github.com"
description = "Rust"
