[package]
name = "cicy-connector"
version = "1.0.95"
authors = ["Barry"]
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "cicy-connector"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
libc = "0.2"
chrono = "0.4"
flexi_logger = "0.22"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
time = "0.3"


