[package]
name = "cicy-server"
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
version = "1.0.89"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
include_dir = "0.7.3"
mime_guess = "2.0.4"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "set-header", "trace"] }
serde_json = "1.0.114"
futures-util = "0.3.30"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
time = "0.3.41"
libc = "0.2.174"
serde = { version = "1", features = ["derive"] }
flexi_logger = "0.22"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_yaml = "*"
regex = "1.11.1"